--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -17,9 +17,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/menu1/">Code blocks</a></li>
-      <li><a href="/menu2/">More goodies</a></li>
-      <li><a href="/menu3/">Tags</a></li>
+      <li><a href="/menu1/">Resources</a></li>
     </ul>
     <img src="/assets/hamburger.svg" id="menu-icon">
   </nav>
@@ -89,7 +87,7 @@ end</code></pre> </p>
 <p>Using this approach with the <code>generate_results.jl</code> file also makes sure that all the code on your website works and that all results match the code which makes maintenance easier.</p>
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: September 10, 2020. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
+    &copy; Adam Gayoso, Matt Jones. Last modified: September 10, 2020. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
