--- a/__site/menu2/index.html
+++ b/__site/menu2/index.html
@@ -17,9 +17,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/menu1/">Code blocks</a></li>
-      <li><a href="/menu2/">More goodies</a></li>
-      <li><a href="/menu3/">Tags</a></li>
+      <li><a href="/menu1/">Resources</a></li>
     </ul>
     <img src="/assets/hamburger.svg" id="menu-icon">
   </nav>
@@ -106,7 +104,7 @@ end</code></pre>
 <p><strong>Note</strong>: the output <strong>will be</strong> reprocessed by Franklin, if you want to avoid this, then escape the output by using <code>return &quot;~~~&quot; * s * &quot;~~~&quot;</code> and it will be plugged  in as is in the HTML.</p>
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: September 10, 2020. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
+    &copy; Adam Gayoso, Matt Jones. Last modified: September 10, 2020. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
