update resources name

--- a/__site/index.html
+++ b/__site/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/menu1/">Resources</a></li>
+      <li><a href="/resources/">Resources</a></li>
     </ul>
     <img src="/assets/hamburger.svg" id="menu-icon">
   </nav>
