--- a/__site/index.html
+++ b/__site/index.html
@@ -30,7 +30,7 @@
 <br>
  Presenter: Matt Jones, Bioinformatics UCSF 
 <br>
- Materials: <a href="/pages/tensorflow">Tutorial</a></p>
+ Materials: <a href="/pages/tensorflow">Tutorial</a>, <a href="https://www.youtube.com/watch?v&#61;Sw7yAEpLCXc">Video</a></p>
 <p><span style="font-weight: 750"> Topic:  Leveraging Julia for Data Science</span><br> Details: Thursday, Oct 1, 11am - 12pm 
 <br>
  Presenter: Tamas Nagy, Bioinformatics UCSF</p>
