--- a/__site/index.html
+++ b/__site/index.html
@@ -24,7 +24,7 @@
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="overview"><a href="#overview">Overview</a></h1>
-<p>These seminars are taught by graduate students and focuses on software tools, techniques, and libraries that are useful for researchers performing computation and data analysis.  There is an emphasis on subjects related to the biological sciences, but many of the techniques are general and the seminar is open to researchers in all disciplines.</p>
+<p>These seminars are taught by graduate students and focus on software tools, techniques, and libraries that are useful for researchers performing computation and data analysis.  There is an emphasis on subjects related to the biological sciences, but many of the techniques are general and the seminar is open to researchers in all disciplines.</p>
 <h2 id="fall_2020"><a href="#fall_2020">Fall 2020</a></h2>
 <p><span style="font-weight: 750"> Topic:  Getting Started with Tensorflow</span><br> Details: Thursday, Sept 10, 11am - 12pm 
 <br>
